fix alignment for body on mobile

--- a/main.css
+++ b/main.css
@@ -27,7 +27,10 @@ body {
   font-family: var(--regular-font-family);
   display: flex;
   justify-content: center;
-  align-items: center;
+
+  @media (min-width: 768px) {
+    align-items: center;
+  }
 }
 
 main {
